chore: バッジ詳細ページのベースURLとパスの部分を分けた
